Fix numbers writing to strings when sending WorldTemperatureConfig over NBT